[clean-cluster-mapper] - Update mapping to remove unrequired hardcoded clusterMapper.